fix: overflow hidden for text editor in print view

--- a/frappe/public/scss/desk/quill.scss
+++ b/frappe/public/scss/desk/quill.scss
@@ -59,6 +59,8 @@
 	.ql-snow .ql-editor {
 		height: auto;
 		min-height: 0;
+		max-height: none;
+		overflow-y: hidden;
 	}
 }
 
